
[project]
name = "sage-importance"
version = "0.0.7"
description = "For calculating global feature importance using Shapley values."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Ian Covert", email = "ian.covert@gmail.com"},
]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

requires-python = ">=3.8"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]

dev=[
    "build",
    "pre-commit==4.2.0",
    "ruff==0.11.11"
]

notebook=[
    "catboost",
    "ipykernel",
    "gender-guesser",
    "pandas",
    "tensorflow",
    "torch",
    "torchvision",
    "scikit-learn",
    "xgboost",
]

[project.urls]
Repository = "https://github.com/iancovert/sage/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sage"]

[tool.ruff]

[tool.ruff.lint]

# See rules: https://beta.ruff.rs/docs/rules/
select = [
    "I",    # isort
    "N",    # pep8-naming
    "NPY",  # numpy
    "RUF",  # ruff-specific rules
]

ignore = [
    "N803",  # argument name should be lowercase; fine for matrices
    "N806",  # variable name should be lowercase; fine for matrices
    "NPY002", # allow calls to np.random; could cause slightly different results
]

preview = true

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["sage"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
